# openDAGent

./: .gitignore  AGENTS.md  PROJECT.md  README.md  config.example.yaml  pyproject.toml
.github/workflows/: publish-pypi.yml
agentic_runtime/: __init__.py
docs/: discord-setup.md  implementation_action_plan.md  llm-providers.md  playwright-setup.md
runtime/config/: app.yaml  model_routing.yaml  models.yaml
runtime/config/capabilities/: design.system.webapp.yaml  scm.github.repo.bootstrap.yaml  spec.product.refine.yaml
src/agentic_runtime/: __init__.py  app.py  artifacts.py  chatgpt_auth.py  cli.py  config.py  dashboard.py  db.py  exceptions.py  ids.py  ingress.py  llm.py  models.py  planner.py  scheduler.py  tracing.py  worker.py
src/agentic_runtime/capabilities/: __init__.py  base.py  chat_response.py
src/agentic_runtime/defaults/: app.yaml
src/agentic_runtime/defaults/capabilities/: analyze_image.yaml  browser_use.yaml  chat_response.yaml  code.yaml  (+9 more)
src/agentic_runtime/mcp/: client.py  manager.py
src/agentic_runtime/opencode/: server.py
src/agentic_runtime/static/: artifact-viewer.js  graph.js  styles.css
src/agentic_runtime/templates/: base.html  capabilities.html  capability_detail.html  capability_new.html  chat.html  chat_new.html  dashboard.html  models.html  project_detail.html  task_detail.html
src/agentic_runtime/tools/: __init__.py  artifacts.py  email.py  files.py  image.py  messaging.py  opencode_tool.py  runtime.py  web.py
tests/: test_app.py  test_artifacts.py  test_cli.py  test_config.py  test_core_utils.py  test_db.py
