[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openDAGent"
version = "0.3.5"
description = "DAG artifact/task oriented for agentic AI workflows."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "httpx>=0.27,<1",
  "uvicorn>=0.30,<1",
  "pyyaml>=6.0,<7",
]

[project.scripts]
openDAGent = "agentic_runtime.cli:main"

[project.optional-dependencies]
dev = []

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentic_runtime = ["templates/*.html", "static/*", "static/*.png", "defaults/*.yaml", "defaults/capabilities/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
